refactor(snomed)!: rename `group` field on SnomedRelationshipDoc...
...to `relationshipGroup` to allow sorting/filtering on this field
using its official RF2 property name.

Affected endpoints:
`POST /:path/relationships`
`PUT /:path/relationships/:id`
Body has changed to use `relationshipGroup` property name instead of
`group`.